@@ -8,6 +8,7 @@ Cacti CHANGELOG
 -bug#0001147: Cactid doesn't trim white space from data template OIDs 
 -bug#0001166: Installer does not properly handle disabled guest_user conversion
 -bug#0001174: Unidentified index warning
+-bug#0001176: Problem validating IPv6 addresses
 -bug#0001191: Faulty IP address validation by ping.php script
 -bug#0001204: since upgrade to 0.87b the hosts with ip address with 255 are down and have no datas
 -bug#0001206: wrong "include" statements replaced by "include_once" (was: Graphs are not Zoom-able)
@@ -50,6 +51,7 @@ Cacti CHANGELOG
 -bug: Default refresh on Cacti Log was too quick
 -bug: Some users don't like the idea of automatic page refreshes
 -bug: Allow more rows to be visible in Cacti pages
+-bug: Ping and SNMP should test both conditions
 -feature#0001289: Add "Graph Properties" wrench to tree+preview mode
 -feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
 -feature#0001250: Dispatching job in poller can lead to unbalanced threads 
@@ -78,6 +80,7 @@ Cacti CHANGELOG
 -feature: Add command line Database upgrade script
 -feature: Add api call to associate graphs with their data sources
 -feature: Move the notes field to bottom of page
+-feature: New availability option "Ping or SNMP"
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
